# minishell

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  breakpoint_scripts.py  exec.drawio  shell_grammar
Libft/: Makefile
Libft/includes/: dictionary.h  ft_printf_internal.h  libft.h  libft_internal.h
Libft/sources/: arr_ichr.c  arr_isvalid.c  arrstr_len.c  atoi_long.c  btr_clear.c  btr_get_last.c  btr_get_root.c  btr_new.c  btr_set_l_child.c  btr_set_r_child.c  btr_size.c  el.c  free_null.c  free_splited_str.c  free_wrap.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstiter.c  ft_lstnew.c  ft_lstsize.c  ft_memcmp.c  ft_memcpy.c  (+24 more)
includes/: builtin.h  env.h  environment.h  envvar.h  error.h  error_codes.h  exec.h  expander.h  external_functions.h  lexer.h  minishell.h  parser.h  signals.h  tokenizer.h
sources/: .gitignore  a.out  analizer.c  buili_in_echo.c  built_in_cd.c  built_in_cd_utils.c  built_in_cd_utils2.c  built_in_echo.c  built_in_env.c  built_in_env_export.c  built_in_exit.c  built_in_export.c  built_in_pwd.c  built_in_unset.c  check_simple_tokens.c  check_sipmle_tokens_pt2.c  cool_feature.c  env.c  env_analize.c  env_dic_utils.c  env_dict.c  env_last_error.c  env_utils.c  env_var.c  environment.c  environment2.c  environment_env_list.c  environment_env_list_utils.c  environment_last_error.c  environment_setup.c  environment_utils.c  environment_utils_intern.c  envvar.c  envvar_dic_utils.c  envvar_dict.c  envvar_utils.c  error.c  error2.c  exec.c  exec.drawio  (+64 more)
